# ADAM

./: ADAM - The Story Deck v0.2.pptx  ADAM - The Story Deck v1.0.pptx  README Simple Text.md  README.md
ADAM - AGT LIGHT Plugin v0.2/: ADAM - AGT Light Deployment Specification.docx  ADAM - AGT Light Integration Plugin.docx  README v0.2.docx  README.md
ADAM - AGT LIGHT Plugin v1.0/: ADAM - AGT Light Deployment Specification.docx  ADAM - AGT Light Integration Plugin.docx  README.md
ADAM - AGT-Plugin - FULL AGT Implementation v0.2/: README.md
ADAM - BOSS Governance and Scoring Engine - Stand Alone/: .dockerignore  .gitignore  .pre-commit-config.yaml  BOSS Engine - Reference Manual v0.2.docx  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
ADAM - BOSS Governance and Scoring Engine - Stand Alone/.github/: dependabot.yml  pull_request_template.md
ADAM - BOSS Governance and Scoring Engine - Stand Alone/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
ADAM - BOSS Governance and Scoring Engine - Stand Alone/.github/workflows/: ci.yml  codeql.yml  release.yml
ADAM - BOSS Governance and Scoring Engine - Stand Alone/boss_adapters/: __init__.py  ai_foundry_adapter.py  base.py  crewai_adapter.py  generic.py  langgraph_adapter.py  openai_agents_adapter.py
ADAM - BOSS Governance and Scoring Engine - Stand Alone/boss_api/: __init__.py  app.py  config.py  deps.py  security.py  telemetry.py
ADAM - BOSS Governance and Scoring Engine - Stand Alone/boss_api/routers/: __init__.py  config_router.py  exceptions.py  flight_recorder.py  graph.py  health.py  intent.py  receipts.py  score.py
ADAM - BOSS Governance and Scoring Engine - Stand Alone/boss_console/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  standalone.html  tailwind.config.ts  tsconfig.node.json  vite.config.ts
ADAM - BOSS Governance and Scoring Engine - Stand Alone/boss_console/src/: App.tsx  index.css  main.tsx  types.ts
ADAM - BOSS Governance and Scoring Engine - Stand Alone/boss_console/src/components/: DashboardPage.tsx  DimensionRadar.tsx  ExceptionQueuePage.tsx  FlightRecorderPage.tsx  FrameworksPage.tsx  HeaderBar.tsx  ReceiptsPage.tsx  ScoringPage.tsx  TierConfigPage.tsx  TierPill.tsx
ADAM - BOSS Governance and Scoring Engine - Stand Alone/boss_core/: __init__.py  composite.py  exceptions.py  flight_recorder.py  frameworks.py  graph_client.py  receipts.py  router.py  schemas.py  tiers.py  version.py
ADAM - BOSS Governance and Scoring Engine - Stand Alone/boss_core/dimensions/: __init__.py  base.py  doctrinal.py  financial.py  regulatory.py  reputational.py  rights.py  security.py  sovereignty.py
ADAM - BOSS Governance and Scoring Engine - Stand Alone/boss_graph/: __init__.py  graphql_view.graphql  loader.py  schema.cypher  seed.cypher
ADAM - BOSS Governance and Scoring Engine - Stand Alone/deploy/helm/boss-engine/: .helmignore  Chart.yaml  values.yaml
ADAM - BOSS Governance and Scoring Engine - Stand Alone/deploy/helm/boss-engine/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  graph-seed-job.yaml  hpa.yaml  ingress.yaml  neo4j.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
ADAM - BOSS Governance and Scoring Engine - Stand Alone/deploy/k8s/: 00-namespace.yaml  10-serviceaccount.yaml  20-configmap.yaml  21-secret.example.yaml  30-deployment.yaml  31-service.yaml  40-hpa.yaml  41-poddisruptionbudget.yaml  50-networkpolicy.yaml  60-ingress.example.yaml  70-servicemonitor.yaml  80-neo4j.yaml  90-job-graph-seed.yaml
ADAM - BOSS Governance and Scoring Engine - Stand Alone/docs/: BOSS-Engine-Reference-Manual-v0.2.docx  boss-engine-reference-manual.docx  build_reference_manual.js
ADAM - BOSS Governance and Scoring Engine - Stand Alone/examples/: example_ai_foundry.py  example_crewai.py  example_langgraph.py  example_openai_agents.py
ADAM - BOSS Governance and Scoring Engine - Stand Alone/tests/: TESTING.md  __init__.py  conftest.py  test_adapters.py  test_api_exceptions.py  test_api_flight_recorder.py  test_api_health_and_config.py  test_api_receipts.py  test_api_score.py  test_composite.py  test_flight_recorder.py  test_graph_loader.py  test_router.py  test_schemas.py  test_schemathesis.py  test_tiers.py
ADAM - BOSS Governance and Scoring Engine - Stand Alone/tests/fixtures/: amber_coast_intent.json  ohshat_intent.json  soap_intent.json  tier_config_regulatory_first.json
ADAM - BOSS Governance and Scoring Engine - Stand Alone/tests/property/: __init__.py  test_properties.py
ADAM - BOSS Governance and Scoring Engine - Stand Alone/v0.2/: BOSS Engine - Reference Manual v0.2 - Change Notes.docx
ADAM - DNA Deployment Tool v1.0/: README.md  (+3 more)
ADAM Sovereignty Connector v0.2/: README v0.2.docx  build.bat  pyproject.toml  requirements.txt
ADAM Sovereignty Connector v0.2/deploy/helm/adam-umbrella/: values.yaml
ADAM Sovereignty Connector v0.2/deploy/helm/adam-umbrella/templates/: core-engine.yaml  directors.yaml  flight-recorder.yaml  namespaces.yaml
ADAM Sovereignty Connector v0.2/deploy/manifests/: 20-constitution-directors.yaml  30-core-engine.yaml  50-flight-recorder.yaml
ADAM Sovereignty Connector v0.2/docs/: ARCHITECTURE.md  QUICKSTART.md
ADAM Sovereignty Connector v0.2/scripts/: build_offline_media.ps1
ADAM Sovereignty Connector v0.2/scripts/preflight/: validate-rego.sh
ADAM Sovereignty Connector v0.2/src/adam_sovereignty_connector/: cli.py
ADAM Sovereignty Connector v0.2/src/adam_sovereignty_connector/ai/: __init__.py  base.py
ADAM Sovereignty Connector v0.2/src/adam_sovereignty_connector/core/: command_catalog.py  orchestrator.py
ADAM Sovereignty Connector v0.2/src/adam_sovereignty_connector/deploy/: cluster.py
ADAM Sovereignty Connector v0.2/src/adam_sovereignty_connector/http/: server.py
ADAM Sovereignty Connector v0.2/src/adam_sovereignty_connector/installers/: __init__.py  base.py  helm.py  k3d.py
ADAM Sovereignty Connector v0.2/src/adam_sovereignty_connector/mcp/: __init__.py
(+545 files in other folders)
