[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boss-engine"
version = "3.2.0"
description = "BOSS AI Governance & Risk Engine — the standalone scoring, exception, and evidence service of the ADAM Autonomy Doctrine & Architecture Model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "ADAM Project — BOSS Working Group" }
]
keywords = [
    "ai-governance",
    "risk-scoring",
    "adam",
    "boss",
    "agent-governance",
    "langgraph",
    "crewai",
    "ai-foundry",
    "openai-agents",
    "eu-ai-act",
    "gdpr",
    "dora",
    "nis2",
    "iso-42001",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115,<0.120",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "uvicorn[standard]>=0.30,<0.40",
    "python-json-logger>=2.0,<3.0",
    "PyJWT>=2.9,<3.0",
    "cryptography>=43.0,<46.0",
    "httpx>=0.27,<0.29",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.23,<6.0"]
adapters = [
    "langchain-core>=0.3,<0.4",
    "openai>=1.40,<2.0",
    "crewai>=0.55,<1.0",
    "azure-ai-inference>=1.0.0b4",
]
metrics = [
    "prometheus-client>=0.20,<0.22",
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-exporter-otlp>=1.27,<2.0",
]
test = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<7.0",
    "hypothesis>=6.112,<7.0",
    "schemathesis>=3.36,<4.0",
    "httpx>=0.27,<0.29",
    "respx>=0.21,<0.23",
]
lint = [
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "types-PyYAML",
    "pre-commit>=3.8,<5.0",
]
dev = [
    "boss-engine[neo4j,adapters,metrics,test,lint]",
    "ipython>=8.26,<9.0",
]

[project.urls]
Homepage = "https://github.com/Hercamo/ADAM"
Documentation = "https://github.com/Hercamo/ADAM/tree/main/boss-engine/docs"
Repository = "https://github.com/Hercamo/ADAM"
Issues = "https://github.com/Hercamo/ADAM/issues"

[project.scripts]
boss-api = "boss_api.app:main"
boss-graph = "boss_graph.loader:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["boss_core*", "boss_api*", "boss_graph*", "boss_adapters*"]
exclude = ["tests*", "deploy*", "docs*", "examples*", "boss_console*", "scripts*"]

[tool.setuptools.package-data]
boss_graph = ["*.cypher", "*.graphql"]
boss_core = ["dimensions/*.yaml", "dimensions/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["boss_console", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "C4",            # flake8-comprehensions
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
    "ASYNC",         # async antipatterns
    "S",             # bandit-lite security
    "PTH",           # pathlib
    "TID",           # tidy imports
    "T20",           # no print()
    "N",             # naming
]
ignore = [
    "E501",  # line length handled by formatter
    "S101",  # asserts are allowed in tests
    "B008",  # FastAPI Depends(...) in defaults
    "S311",  # random used for non-crypto (hash salt, test fixtures)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20", "N", "SIM117"]
"examples/**" = ["T20", "S"]
"scripts/**" = ["T20"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]
exclude = ["boss_console/", "build/", "dist/", "\\.venv/", "tests/fixtures/"]

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "crewai.*",
    "langchain_core.*",
    "azure.*",
    "prometheus_client.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-p", "no:cacheprovider",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "integration: integration tests that may touch a real Neo4j",
    "schemathesis: property tests driven by the OpenAPI schema",
    "slow: tests that take more than 1s",
]

[tool.coverage.run]
branch = true
source = ["boss_core", "boss_api", "boss_graph", "boss_adapters"]
omit = ["*/__main__.py", "*/_version.py"]

[tool.coverage.report]
precision = 1
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.bandit]
targets = ["boss_core", "boss_api", "boss_graph", "boss_adapters"]
exclude_dirs = ["tests", "boss_console", "examples"]
