[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adam-sovereignty-connector"
version = "1.1.0"
description = "Local orchestrator + AI passthrough that stands up the ADAM Doctrine reference stack on an air-gapped Windows 11 host. Aligned with ADAM v1.4 (BOSS v3.2, canonical 5-Director Constitution, 81+ Agent Mesh)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Michael - ADAM Project" }]
keywords = ["adam", "autonomy", "sovereignty", "kubernetes", "k3d", "mcp", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Installation/Setup",
]
# Note: requirements.txt uses `==` pins for reproducible PyInstaller builds.
# pyproject.toml keeps compatible-release specifiers for `pip install .` flex.
dependencies = ["PyYAML~=6.0"]

[project.optional-dependencies]
anthropic = ["anthropic~=0.40"]
openai = ["openai~=1.58"]
corpus = ["python-docx~=1.1", "pypdf~=5.1", "python-pptx~=1.0"]
all = ["anthropic~=0.40", "openai~=1.58", "python-docx~=1.1", "pypdf~=5.1", "python-pptx~=1.0"]
dev = ["pyinstaller~=6.11", "pytest~=8.3"]

[project.scripts]
adam-sovereignty-connector = "adam_sovereignty_connector.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"adam_sovereignty_connector" = ["web/static/*"]
